processed/gerrit/txt_full/59426.txt
Change:     59426
Subject:    LU-19055 ptlrpc: missing unlock in ptlrpc_reconnect_if_idle
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/59426
Change-Id:  I4befae9e087c41b25fc030334e22499f09058a07
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Shaun Tancheff
Created:    2025-05-26 04:25:11.000000000
Updated:    2025-07-30 04:19:36.000000000
Patch Set:  3
Insertions: +7
Deletions:  -6
Comments:   5 (1 unresolved)

--- Reviewers ---
  CC: Janitor Bot
  REVIEWER: Oleg Drokin

--- Commit Message ---
LU-19055 ptlrpc: missing unlock in ptlrpc_reconnect_if_idle

if ptlrpc_connect_import_locked() fails the caller will expect
imp->imp_lock to be unlocked.

Test-Parameters: for-build-only
CoverityID: 466795 ("Missing unlock")
Fixes: b09afdf576 ("LU-11269 ptlrpc: request's counter in import")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I4befae9e087c41b25fc030334e22499f09058a07

--- Review History ---

--- Message (Shaun Tancheff, 2025-05-26 04:25:11.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-05-26 04:25:50.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-05-26 04:28:13.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Lustre Gerrit Janitor, 2025-05-26 04:28:59.000000000) ---
Patch Set 1:

Builds for x86_64 centos7,rocky8.10 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/51955/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Lustre Gerrit Janitor, 2025-05-26 04:31:10.000000000) ---
Patch Set 1:

(1 comment)

Crash (id 73451 seen 0) in runtests@zfs
- Failed run: https://testing.whamcloud.com/gerrit-janitor/51955/testresults/runtests-zfs-centos7_x86_64-centos7_x86_64

--- Message (Lustre Gerrit Janitor, 2025-05-26 04:33:13.000000000) ---
Patch Set 1:

Initial testing failed:

> runtests@ldiskfs+DNE Server crashed(85s)
- (Untriaged #73451, seen 1 times before)
> runtests-ssk@ldiskfs+SharedKey Server crashed(205s)
- (Untriaged #73451, seen 2 times before)
> runtests@zfs Server crashed(75s)
- (Untriaged #73451, seen 0 times before)

Tests with NEW Warning messages:
- runtests@ldiskfs+DNE(Server: sleeping in atomic) runtests-ssk@ldiskfs+SharedKey(Server: sleeping in atomic) runtests@zfs(Server: sleeping in atomic,Server: scheduling in atomic) 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/51955/results.html

--- Message (Shaun Tancheff, 2025-05-26 04:38:00.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2025-05-26 04:38:03.000000000) ---
Patch Set 1:

No Builds Executed

--- Message (jenkins, 2025-05-26 04:38:07.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/113710/ : ABORTED

--- Message (Lustre Gerrit Janitor, 2025-05-26 04:41:02.000000000) ---
Patch Set 2:

(1 comment)

centos7: Compile failed

rocky8.10: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/51958/results.html

--- Message (wc-checkpatch, 2025-05-26 04:41:13.000000000) ---
Patch Set 2:

(1 comment)

1 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-05-26 04:43:23.000000000) ---
Patch Set 2:

Cannot build patch due to 14, messages:

 make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/ptlrpc/client.o] Error 1
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/ptlrpc] Error 2
make[2]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre] Error 2
make[1]: *** [Makefile:1944: /home/green/git/lustre-release] Error 2
make: *** [autoMakefile:1232: modules] Error 2
 /home/green/git/lustre-release/lustre/ptlrpc/client.c: In function ‘ptlrpc_reconnect_if_idle’:
 /home/green/git/lustre-release/lustre/ptlrpc/client.c:1004:33: error: expected ‘;’ before ‘:’ token
  1004 |                         goto out:
       |                                 ^
       |                                 ;

--- Message (Janitor Bot, 2025-05-26 04:44:07.000000000) ---
Patch Set 3: Published edit on patch set 2.

--- Message (jenkins, 2025-05-26 04:44:11.000000000) ---
Patch Set 2:

No Builds Executed

--- Message (Janitor Bot, 2025-05-26 04:44:11.000000000) ---
Patch Set 2:

I attempted to fix the build errors present in this patch and succeeded. Yay! Now, keep in mind I barely have any idea what I am doing, so please doublecheck the changes I made to make sure they make sense.

This service is only provided in hopes to be useful and reduce latency from push to getting actual results in the face of trivial code errors

--- Message (jenkins, 2025-05-26 04:44:14.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/113713/ : ABORTED

--- Message (wc-checkpatch, 2025-05-26 04:46:35.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2025-05-26 04:47:09.000000000) ---
Patch Set 3:

Builds for x86_64 centos7,rocky8.10 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/51959/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-05-26 04:47:10.000000000) ---
Patch Set 3:

Code-wise looks good to me.

--- Message (Lustre Gerrit Janitor, 2025-05-26 04:49:25.000000000) ---
Patch Set 3:

(1 comment)

Crash (id 73451 seen 6) in runtests@zfs
- Failed run: https://testing.whamcloud.com/gerrit-janitor/51959/testresults/runtests-zfs-centos7_x86_64-centos7_x86_64

--- Message (Lustre Gerrit Janitor, 2025-05-26 04:53:43.000000000) ---
Patch Set 3:

Initial testing failed:

> runtests@ldiskfs+DNE Server crashed(90s)
- (Untriaged #73451, seen 7 times before)
> runtests-ssk@ldiskfs+SharedKey Server crashed(340s)
- (Untriaged #73451, seen 8 times before)
> runtests@zfs Server crashed(80s)
- (Untriaged #73451, seen 6 times before)

Tests with NEW Warning messages:
- runtests@ldiskfs+DNE(Server: sleeping in atomic) runtests-ssk@ldiskfs+SharedKey(Server: sleeping in atomic) runtests@zfs(Server: sleeping in atomic) 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/51959/results.html

--- Message (jenkins, 2025-05-26 05:26:17.000000000) ---
Patch Set 3: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/113714/ : FAILURE

--- Message (Oleg Drokin, 2025-05-26 05:38:19.000000000) ---
Patch Set 3: Code-Review-1

(1 comment)

I am not sure what you are trying to do, there's no unlock necessary because ptlrpc_connect_import_locked() always unlocks, no matter if successful or not

--- Message (wc-checkpatch, 2025-07-28 18:24:00.000000000) ---
Patch Set 3: Code-Review-1

This change cannot be cherry-picked to master.
Please rebase the change locally and upload the rebased commit for review.

--- Message (wc-checkpatch, 2025-07-28 19:04:31.000000000) ---
Patch Set 3: -Code-Review

Looks good to me.

--- Message (Shaun Tancheff, 2025-07-30 04:19:36.000000000) ---
Abandoned

Not needed
